--- a/LoginUI/Base.lproj/Main.storyboard
+++ b/LoginUI/Base.lproj/Main.storyboard
@@ -1,24 +1,138 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eDb-Ms-9Ig">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LoginUI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nYC-Tv-LDR">
+                                <rect key="frame" x="0.0" y="44" width="414" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="8nf-Tk-PUS"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="J72-cW-yxr" kind="embed" id="JGy-sv-mky"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="owP-y6-3qI">
+                                <rect key="frame" x="0.0" y="104" width="414" height="758"/>
+                            </containerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZL2-WP-Ymd">
+                                <rect key="frame" x="354" y="44" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="acI-Lc-sKf"/>
+                                    <constraint firstAttribute="height" constant="60" id="nKt-se-TxB"/>
+                                </constraints>
+                                <state key="normal" title="Next"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't know your workplace URL?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2H-Dq-55O">
+                                <rect key="frame" x="20" y="831" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Wl-gu-pkr">
+                                <rect key="frame" x="20" y="428" width="374" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="2CU-hZ-BLa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="URL" returnKeyType="go"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Slack workspace URL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUi-SM-t1A">
+                                <rect key="frame" x="20" y="399.5" width="374" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="workspace-url.slack.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yER-5A-SA2">
+                                <rect key="frame" x="20" y="437.5" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ZL2-WP-Ymd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1bn-go-wAu"/>
+                            <constraint firstItem="nYC-Tv-LDR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2Is-3t-wOA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nYC-Tv-LDR" secondAttribute="trailing" id="4du-Oj-vNJ"/>
+                            <constraint firstItem="yER-5A-SA2" firstAttribute="leading" secondItem="8Wl-gu-pkr" secondAttribute="leading" id="6ww-bZ-dOX"/>
+                            <constraint firstItem="vUi-SM-t1A" firstAttribute="leading" secondItem="8Wl-gu-pkr" secondAttribute="leading" id="79T-dv-yxd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="R2H-Dq-55O" secondAttribute="trailing" constant="20" id="ARY-fW-8Jw"/>
+                            <constraint firstItem="R2H-Dq-55O" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ERm-90-WnQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vUi-SM-t1A" secondAttribute="trailing" constant="20" id="Ese-So-LbE"/>
+                            <constraint firstItem="owP-y6-3qI" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="FVA-HT-bpQ"/>
+                            <constraint firstItem="vUi-SM-t1A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Oz2-9g-UxK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8Wl-gu-pkr" secondAttribute="trailing" constant="20" id="PDe-86-OPX"/>
+                            <constraint firstItem="yER-5A-SA2" firstAttribute="centerY" secondItem="8Wl-gu-pkr" secondAttribute="centerY" id="ScO-iR-C5Z"/>
+                            <constraint firstItem="ZL2-WP-Ymd" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="SoX-ig-drO"/>
+                            <constraint firstItem="8Wl-gu-pkr" firstAttribute="top" secondItem="vUi-SM-t1A" secondAttribute="bottom" constant="8" symbolic="YES" id="YFO-J3-7Qs"/>
+                            <constraint firstItem="yER-5A-SA2" firstAttribute="trailing" secondItem="8Wl-gu-pkr" secondAttribute="trailing" id="Ygg-i0-RaK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="R2H-Dq-55O" secondAttribute="bottom" constant="10" id="Zo3-99-6IE"/>
+                            <constraint firstItem="8Wl-gu-pkr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="dp4-U9-n7c"/>
+                            <constraint firstItem="owP-y6-3qI" firstAttribute="top" secondItem="nYC-Tv-LDR" secondAttribute="bottom" id="hPf-6G-wx6"/>
+                            <constraint firstItem="8Wl-gu-pkr" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="hUe-nL-Atk"/>
+                            <constraint firstItem="owP-y6-3qI" firstAttribute="top" secondItem="ZL2-WP-Ymd" secondAttribute="bottom" id="hsl-vF-f1Y"/>
+                            <constraint firstItem="yER-5A-SA2" firstAttribute="height" secondItem="8Wl-gu-pkr" secondAttribute="height" multiplier="0.525" id="mmC-lY-Scx"/>
+                            <constraint firstItem="nYC-Tv-LDR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="nQx-fN-O0g"/>
+                            <constraint firstItem="owP-y6-3qI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xcz-3i-rKT"/>
+                            <constraint firstItem="owP-y6-3qI" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="z6M-WE-K6y"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="BcQ-wY-fwt"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1042.0289855072465" y="115.84821428571428"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qqz-Cj-kdU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="eDb-Ms-9Ig" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fHD-vy-uYs">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="TYv-uf-GQd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nx0-2j-xRI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="115.84821428571428"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="PWU-lc-SAJ">
+            <objects>
+                <viewController id="J72-cW-yxr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rez-gF-9Qe">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kk0-70-6ZN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="600" y="-300"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
