--- a/LoginUI/Base.lproj/Main.storyboard
+++ b/LoginUI/Base.lproj/Main.storyboard
@@ -21,9 +21,6 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="8nf-Tk-PUS"/>
                                 </constraints>
-                                <connections>
-                                    <segue destination="J72-cW-yxr" kind="embed" id="JGy-sv-mky"/>
-                                </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="owP-y6-3qI">
                                 <rect key="frame" x="0.0" y="104" width="414" height="758"/>
@@ -93,6 +90,12 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="BcQ-wY-fwt"/>
+                    <connections>
+                        <outlet property="nextButton" destination="ZL2-WP-Ymd" id="UNB-Dl-uk1"/>
+                        <outlet property="placeHolder" destination="yER-5A-SA2" id="fGy-ZE-keI"/>
+                        <outlet property="placeHolderLeadingConstraint" destination="6ww-bZ-dOX" id="fLZ-ZQ-BV7"/>
+                        <outlet property="textField" destination="8Wl-gu-pkr" id="ice-4x-jdu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -114,20 +117,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nx0-2j-xRI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="115.84821428571428"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="PWU-lc-SAJ">
-            <objects>
-                <viewController id="J72-cW-yxr" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="rez-gF-9Qe">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kk0-70-6ZN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="600" y="-300"/>
         </scene>
     </scenes>
     <resources>
