Feat - MBTI 결과화면

--- a/ddona/ddona/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/ddona/ddona/Resources/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="vtm-QY-ZI6">
+                                <rect key="frame" x="0.0" y="59" width="393" height="793"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.38039215686274508" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.098039215686274508" green="0.098039215686274508" blue="0.098039215686274508" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vtm-QY-ZI6" secondAttribute="trailing" id="JxB-m2-8Ef"/>
+                            <constraint firstAttribute="bottom" secondItem="vtm-QY-ZI6" secondAttribute="bottom" id="TnS-sU-SuX"/>
+                            <constraint firstItem="vtm-QY-ZI6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="W92-9u-SZH"/>
+                            <constraint firstItem="vtm-QY-ZI6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qw5-PN-1Qv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +35,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="splash" width="828" height="1688"/>
+    </resources>
 </document>
